# rotanika

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  rotanika.py  rotanika.spec  rotanika_mac.spec
.github/: copilot-instructions.md
.github/workflows/: call-deploy-rotanika.yml  call-run-tests.yml  on-push-branch-main.yml  on-push.yml
dev/: akinator.py  genai-examples.py
src/: console.py  console_styles.py  strings.py  test_utils.py  utils.py
